--- a/index.css
+++ b/index.css
@@ -14,6 +14,10 @@ svg{
 	padding: 2px;
 }
 
+footer{
+	border-top: 1px solid gray;
+}
+
 @media only screen and (min-width: 800px) {
   section{
 	height: 100vh;
